--- a/Web_Technologies/Code Challenges/Code_Challenge_7/Code_Challenge_7/Code_Challenge_7.csproj
+++ b/Web_Technologies/Code Challenges/Code_Challenge_7/Code_Challenge_7/Code_Challenge_7.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FD899572-BE82-43E1-9E13-4B1512FB1AC6}</ProjectGuid>
+    <ProjectGuid>{6942EBD4-5FB9-483D-9D3F-C135EDE11765}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Assignment_2</RootNamespace>
-    <AssemblyName>Assignment_2</AssemblyName>
+    <RootNamespace>Code_Challenge_7</RootNamespace>
+    <AssemblyName>Code_Challenge_7</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,9 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Assignment_2.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
