--- a/Mini_Project/CSharp/Railway_Project/Railway_Project/Railway_Project.csproj
+++ b/Mini_Project/CSharp/Railway_Project/Railway_Project/Railway_Project.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogic.cs" />
     <Compile Include="DataAccess.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
