--- a/ASP.Net/Assignments/Assignment1/Assignment1/Assignment1.csproj
+++ b/ASP.Net/Assignments/Assignment1/Assignment1/Assignment1.csproj
@@ -67,10 +67,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DropDownSelect.aspx" />
+    <Content Include="Images\AC.jpg" />
+    <Content Include="Images\TV.jpg" />
+    <Content Include="Images\Washing Machine.jpg" />
     <Content Include="Validator.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DropDownSelect.aspx.cs">
+      <DependentUpon>DropDownSelect.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DropDownSelect.aspx.designer.cs">
+      <DependentUpon>DropDownSelect.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validator.aspx.cs">
       <DependentUpon>Validator.aspx</DependentUpon>
